--- a/credit-default-classification.ipynb
+++ b/credit-default-classification.ipynb
@@ -3362,10 +3362,383 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "QT_PC_ATRASO                      0.143154\n",
+       "QT_DIAS_PRIM_PC_ATRASO            0.128099\n",
+       "VL_TOTAL_PC_PAGAS                 0.115651\n",
+       "VALOR_PARCELA                     0.098500\n",
+       "QT_TOTAL_PC_PAGAS                 0.076296\n",
+       "RENDA_MENSAL_CLIENTE              0.072583\n",
+       "QT_PC_PAGA_EM_DIA                 0.063588\n",
+       "TAXA_AO_ANO                       0.063518\n",
+       "IDADE_DATA_ASSINATURA_CONTRATO    0.051040\n",
+       "QT_DIAS_MAX_ATRASO                0.038168\n",
+       "QT_DIAS_MEDIA_ATRASO              0.033490\n",
+       "CIDADE_CLIENTE                    0.031827\n",
+       "QT_DIAS_MIN_ATRASO                0.029762\n",
+       "FAIXA_VALOR_FINANCIADO            0.029486\n",
+       "ESTADO_CLIENTE                    0.024839\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importances.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['modelo_treinado.pk']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(clf, 'modelo_treinado.pk')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "clf = joblib.load('modelo_treinado.pk')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conexao = conexao = pyodbc.connect(\n",
+    "    \"DRIVER={ODBC Driver 17 for SQL Server};\"\n",
+    "    \"SERVER=localhost;\"\n",
+    "    \"DATABASE=MODELOS_PREDITIVOS;\"\n",
+    "    \"UID=usuario_python;\"\n",
+    "    \"PWD=123456;\"\n",
+    ")\n",
+    "\n",
+    "df_original = pd.read_sql_query('SELECT * FROM EXTRACAO_DADOS_SISTEMA', conexao)\n",
+    "\n",
+    "conexao.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NUMERO_CONTRATO</th>\n",
+       "      <th>DATA_ASSINATURA_CONTRATO</th>\n",
+       "      <th>TIPO_FINANCIAMENTO</th>\n",
+       "      <th>TAXA_AO_ANO</th>\n",
+       "      <th>PZ_FINANCIAMENTO</th>\n",
+       "      <th>CIDADE_CLIENTE</th>\n",
+       "      <th>ESTADO_CLIENTE</th>\n",
+       "      <th>RENDA_MENSAL_CLIENTE</th>\n",
+       "      <th>QT_PC_ATRASO</th>\n",
+       "      <th>QT_DIAS_PRIM_PC_ATRASO</th>\n",
+       "      <th>QT_TOTAL_PC_PAGAS</th>\n",
+       "      <th>VL_TOTAL_PC_PAGAS</th>\n",
+       "      <th>QT_PC_PAGA_EM_DIA</th>\n",
+       "      <th>QT_DIAS_MIN_ATRASO</th>\n",
+       "      <th>QT_DIAS_MAX_ATRASO</th>\n",
+       "      <th>QT_DIAS_MEDIA_ATRASO</th>\n",
+       "      <th>VALOR_FINANCIAMENTO</th>\n",
+       "      <th>VALOR_PARCELA</th>\n",
+       "      <th>IDADE_DATA_ASSINATURA_CONTRATO</th>\n",
+       "      <th>INADIMPLENTE_COBRANCA</th>\n",
+       "      <th>FAIXA_PRAZO_FINANCIAMENTO</th>\n",
+       "      <th>FAIXA_VALOR_FINANCIADO</th>\n",
+       "      <th>PREVISOES</th>\n",
+       "      <th>PROBABILIDADES</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>41637</td>\n",
+       "      <td>2012-03-23</td>\n",
+       "      <td>IMOBILIARIO</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>180</td>\n",
+       "      <td>FORTALEZA</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>4800.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>97</td>\n",
+       "      <td>120078.00</td>\n",
+       "      <td>72</td>\n",
+       "      <td>3</td>\n",
+       "      <td>506</td>\n",
+       "      <td>152</td>\n",
+       "      <td>73767.0</td>\n",
+       "      <td>471.29</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>121 até 180 Meses</td>\n",
+       "      <td>Até 100 mil</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>0.963333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>67958</td>\n",
+       "      <td>2012-01-24</td>\n",
+       "      <td>IMOBILIARIO</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>SAO PAULO</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>6800.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>103</td>\n",
+       "      <td>156759.47</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>349</td>\n",
+       "      <td>93</td>\n",
+       "      <td>323251.0</td>\n",
+       "      <td>1858.69</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>181 até 240 Meses</td>\n",
+       "      <td>301 até 400 mil</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>0.960000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>68502</td>\n",
+       "      <td>2014-05-23</td>\n",
+       "      <td>IMOBILIARIO</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>SAO PAULO</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>6800.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>98</td>\n",
+       "      <td>277125.05</td>\n",
+       "      <td>83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>151</td>\n",
+       "      <td>39</td>\n",
+       "      <td>529419.0</td>\n",
+       "      <td>3123.57</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>181 até 240 Meses</td>\n",
+       "      <td>501 até 750 mil</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>0.986667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>68731</td>\n",
+       "      <td>2015-10-23</td>\n",
+       "      <td>IMOBILIARIO</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>SAO PAULO</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>6800.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>87</td>\n",
+       "      <td>351395.19</td>\n",
+       "      <td>66</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3797</td>\n",
+       "      <td>206</td>\n",
+       "      <td>499753.0</td>\n",
+       "      <td>2873.58</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>181 até 240 Meses</td>\n",
+       "      <td>401 até 500 mil</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>0.883333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>68996</td>\n",
+       "      <td>2017-01-24</td>\n",
+       "      <td>IMOBILIARIO</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>200</td>\n",
+       "      <td>SAO PAULO</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>6800.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>344249.83</td>\n",
+       "      <td>57</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36</td>\n",
+       "      <td>10</td>\n",
+       "      <td>722057.0</td>\n",
+       "      <td>4224.03</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>181 até 240 Meses</td>\n",
+       "      <td>501 até 750 mil</td>\n",
+       "      <td>SIM</td>\n",
+       "      <td>0.986667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   NUMERO_CONTRATO DATA_ASSINATURA_CONTRATO TIPO_FINANCIAMENTO  TAXA_AO_ANO  \\\n",
+       "0            41637               2012-03-23        IMOBILIARIO         15.0   \n",
+       "1            67958               2012-01-24        IMOBILIARIO         15.0   \n",
+       "2            68502               2014-05-23        IMOBILIARIO         18.0   \n",
+       "3            68731               2015-10-23        IMOBILIARIO         15.0   \n",
+       "4            68996               2017-01-24        IMOBILIARIO         17.0   \n",
+       "\n",
+       "   PZ_FINANCIAMENTO CIDADE_CLIENTE ESTADO_CLIENTE  RENDA_MENSAL_CLIENTE  \\\n",
+       "0               180      FORTALEZA             CE                4800.0   \n",
+       "1               200      SAO PAULO             SP                6800.0   \n",
+       "2               200      SAO PAULO             SP                6800.0   \n",
+       "3               200      SAO PAULO             SP                6800.0   \n",
+       "4               200      SAO PAULO             SP                6800.0   \n",
+       "\n",
+       "   QT_PC_ATRASO  QT_DIAS_PRIM_PC_ATRASO  QT_TOTAL_PC_PAGAS  VL_TOTAL_PC_PAGAS  \\\n",
+       "0             0                       0                 97          120078.00   \n",
+       "1             0                       0                103          156759.47   \n",
+       "2             0                       0                 98          277125.05   \n",
+       "3             0                       0                 87          351395.19   \n",
+       "4             0                       0                 71          344249.83   \n",
+       "\n",
+       "   QT_PC_PAGA_EM_DIA  QT_DIAS_MIN_ATRASO  QT_DIAS_MAX_ATRASO  \\\n",
+       "0                 72                   3                 506   \n",
+       "1                 42                   1                 349   \n",
+       "2                 83                   1                 151   \n",
+       "3                 66                   1                3797   \n",
+       "4                 57                   1                  36   \n",
+       "\n",
+       "   QT_DIAS_MEDIA_ATRASO  VALOR_FINANCIAMENTO  VALOR_PARCELA  \\\n",
+       "0                   152              73767.0         471.29   \n",
+       "1                    93             323251.0        1858.69   \n",
+       "2                    39             529419.0        3123.57   \n",
+       "3                   206             499753.0        2873.58   \n",
+       "4                    10             722057.0        4224.03   \n",
+       "\n",
+       "   IDADE_DATA_ASSINATURA_CONTRATO INADIMPLENTE_COBRANCA  \\\n",
+       "0                            70.0                   SIM   \n",
+       "1                            28.0                   SIM   \n",
+       "2                            60.0                   SIM   \n",
+       "3                            41.0                   SIM   \n",
+       "4                            63.0                   SIM   \n",
+       "\n",
+       "  FAIXA_PRAZO_FINANCIAMENTO FAIXA_VALOR_FINANCIADO PREVISOES  PROBABILIDADES  \n",
+       "0         121 até 180 Meses            Até 100 mil       SIM        0.963333  \n",
+       "1         181 até 240 Meses        301 até 400 mil       SIM        0.960000  \n",
+       "2         181 até 240 Meses        501 até 750 mil       SIM        0.986667  \n",
+       "3         181 até 240 Meses        401 até 500 mil       SIM        0.883333  \n",
+       "4         181 até 240 Meses        501 até 750 mil       SIM        0.986667  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_original.dropna(inplace=True)\n",
+    "\n",
+    "\n",
+    "bins = [-100, 120, 180, 240]\n",
+    "labels = ['Até 120 Meses', '121 até 180 Meses', '181 até 240 Meses']\n",
+    "df_original['FAIXA_PRAZO_FINANCIAMENTO'] = pd.cut(df_original['PZ_FINANCIAMENTO'], bins=bins, labels=labels)\n",
+    "pd.value_counts(df_original.FAIXA_PRAZO_FINANCIAMENTO) #remover depois\n",
+    "\n",
+    "\n",
+    "bins = [-100, 100000, 200000, 300000, 400000, 500000, 750000, 1000000, 9000000000]\n",
+    "labels = ['Até 100 mil', '101 até 200 mil', '201 até 300 mil', '301 até 400 mil', '401 até 500 mil', \n",
+    "          '501 até 750 mil', 'De 751 até 1.000.000','Mais de 1.000.000']\n",
+    "df_original['FAIXA_VALOR_FINANCIADO'] = pd.cut(df_original['VALOR_FINANCIAMENTO'], bins=bins, labels=labels)\n",
+    "pd.value_counts(df_original.FAIXA_VALOR_FINANCIADO) #remover depois\n",
+    "\n",
+    "columns = ['TAXA_AO_ANO', 'CIDADE_CLIENTE', 'ESTADO_CLIENTE','RENDA_MENSAL_CLIENTE', \n",
+    "           'QT_PC_ATRASO', 'QT_DIAS_PRIM_PC_ATRASO','QT_TOTAL_PC_PAGAS',\n",
+    "           'VL_TOTAL_PC_PAGAS', 'QT_PC_PAGA_EM_DIA','QT_DIAS_MIN_ATRASO',\n",
+    "           'QT_DIAS_MAX_ATRASO', 'QT_DIAS_MEDIA_ATRASO','VALOR_PARCELA',\n",
+    "           'IDADE_DATA_ASSINATURA_CONTRATO', 'FAIXA_VALOR_FINANCIADO',\n",
+    "           'FAIXA_PRAZO_FINANCIAMENTO','INADIMPLENTE_COBRANCA',]\n",
+    "\n",
+    "df_new = df_original[columns].copy()\n",
+    "\n",
+    "variaveis_categoricas = []\n",
+    "for i in df_new.columns[0:16].tolist():\n",
+    "        if df_new.dtypes[i] == 'object' or df_new.dtypes[i] == 'category':                        \n",
+    "            variaveis_categoricas.append(i) \n",
+    "\n",
+    "lb = LabelEncoder()\n",
+    "\n",
+    "for var in variaveis_categoricas:\n",
+    "    df_new[var] = lb.fit_transform(df_new[var])\n",
+    "\n",
+    "\n",
+    "variaveis_explicativas = df_new.iloc[:, 0:15]          \n",
+    "    \n",
+    "\n",
+    "Normalizador = MinMaxScaler()\n",
+    "dados_normalizados = Normalizador.fit_transform(variaveis_explicativas)\n",
+    "\n",
+    "previsoes = clf.predict(dados_normalizados)\n",
+    "probabilidades = clf.predict_proba(dados_normalizados)\n",
+    "df_original['PREVISOES'] = previsoes\n",
+    "df_original['PROBABILIDADES'] = probabilidades[:, 1]\n",
+    "df_original.head()"
+   ]
   }
  ],
  "metadata": {
